--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello</h1>
+    <div class="container">
+        <span class="emoji">&#128514</span>
+        <p class="joke">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto et a atque perferendis blanditiis voluptate voluptatibus suscipit labore, obcaecati provident earum. Soluta deleniti quas quae quaerat laborum reprehenderit ex iste.</p>
+        <button class="btn">Get a Joke</button>
+    </div>
 
     <script src="script.js"></script>
 </body>
