Finish the programs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <span class="emoji">&#128514</span>
-        <p class="joke">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto et a atque perferendis blanditiis voluptate voluptatibus suscipit labore, obcaecati provident earum. Soluta deleniti quas quae quaerat laborum reprehenderit ex iste.</p>
+        <p class="joke"></p>
         <button class="btn">Get a Joke</button>
     </div>
 
