Improved the program for swapping jokes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <span class="emoji">&#128514</span>
-        <p class="joke"></p>
+        <p class="joke swap"></p>
         <button class="btn">Get a Joke</button>
     </div>
 
